# cursor-learning-bundle

./: .env.example  .flake8  .pre-commit-config.yaml  Makefile  POETRY_DEPENDENCY_MANAGEMENT.md  POETRY_SETUP.md  POETRY_SETUP_SUMMARY.md  README.md  STAGE0_README.md  bootstrap_learning_env.sh  foundry.toml  pyproject.toml
.cursor/commands/: curriculum.md  exercise.md  trace-lab.md
.cursor/rules/: 00_execution-protocol.mdc  10_learning-curriculum.mdc  20_python-web3-guidelines.mdc  30_foundry-hardhat-standards.mdc  40_security-gates.mdc
.tasks/: 2025-09-19_2_curriculum-build.md  2025-09-19_8_base-learning.md
contracts/stage0/: HelloBase.sol  SimpleStorage.sol
docs/: BASE_SEPOLIA_QUICK_REFERENCE.md  BRAVE_WALLET_BASE_SEPOLIA_SETUP.md  NUMBER_CONVERTER_GUIDE.md  NUMBER_CONVERTER_SUMMARY.md  WALLET_SETUP_SUMMARY.md  brave-wallet-details.md
lessons/: stage0-lesson1.md  stage0-lesson2.md  stage0-lesson3.md  stage0-lesson4.md  stage0-lesson5.md
python/: __init__.py  cli.py  requirements.txt
python/common/: __init__.py  rpc.py  wallet.py
python/examples/: __init__.py  sign_message.py
python/stage0/: __init__.py  cli.py  hello_base.py
python/tools/: __init__.py  launcher.py  number_converter.py
quizzes/: stage0.md
script/: DeployHelloBase.s.sol  DeploySimpleStorage.s.sol
scripts/: demo-converter.py  dev-setup.sh  verify-wallet-setup.py
templates/: task_file_template.md
test/stage0/: HelloBase.t.sol  SimpleStorage.t.sol
